# SimsonGauge

./: .gitignore  README.md  platformio.ini
csv/: Simson_wolne_100nF.csv  Simson_wolne_ok1250.csv
esp-idf_project/Amoled143_Project-master/: .gitignore  CMakeCache.txt  CMakeCache.txt.bck  CMakeLists.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  sdkconfig.old
esp-idf_project/Amoled143_Project-master/components/UI/: CMakeLists.txt
esp-idf_project/Amoled143_Project-master/components/UI/sls_generated/: CMakeLists.txt  filelist.txt  ui_helpers.h
esp-idf_project/Amoled143_Project-master/components/UI/sls_generated/fonts/: ui_font_UbuntuMediumItalic66.c
esp-idf_project/Amoled143_Project-master/components/UI/sls_generated/images/: ui_img_subaru_logo_3d_vn_rgb450onlylogo_png.c
esp-idf_project/Amoled143_Project-master/components/UI/sls_generated/screens/: ui_ConfigScreen1.c  ui_HeloScreen.c  ui_HeloScreen.h  ui_MainScreen.h
include/: lv_conf.h
motyw_design/: Saira_Condensed_158.c  Saira_Condensed_50.c  Simson S51 Tacho (dzien).html  Simson S51 Tacho (noc).html  Simson S51 Tacho (standalone).html  SplineSansMono_11.c  _tpl_dzien.html  _tpl_noc.html
scripts/: git_version.py  lvgl_build_demos.py  release.ps1
src/: config_screen.cpp  config_screen.h  esp_lcd_sh8601.h  gauge.c  gauge.h  lcd_bsp.c  lcd_bsp.h  lcd_config.h  main.cpp  mcpwm_frequency.c  mcpwm_frequency.h  mcpwm_speed.c  mcpwm_speed.h  ota.cpp  ota.h  settings.cpp  settings.h  simson_waveform.h  test_signal.cpp  test_signal.h  ui_SimsonScreen.c  ui_SimsonScreen.h  ui_callbacks.c  ui_callbacks.h  version.h
src/ui/: ui.c  ui.h  ui_events.c  (+2 more)
tools/: gen_simson_waveform.py
(+177 files in other folders)
